# Multi-Agent-Research-System

./: README.md  api.py  main.py  pyproject.toml  requirements.txt
backend/: api.py
frontend/: index.html
frontend/src/: App.jsx  index.css
src/agents/: agents.py
src/pipelines/: pipeline.py
src/tools/: tools.py
