[project]
name = "codespaces-blank"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi[standard]>=0.136.3",
    "ipykernel>=7.2.0",
    "langchain>=1.3.2",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.0",
    "langchain-groq>=1.1.2",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.2",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "streamlit>=1.57.0",
    "tavily-python>=0.7.24",
]
